hello-world/k3s-manifests/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: msvaterlaus/hello-world:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        command: ["tail"]
        args: ["-f", "/dev/null" ]
